@@ -1,0 +1,5 @@
+This module understands the formats used by MySQL for its DATE,
+DATETIME, TIME, and TIMESTAMP data types. It can be used to parse
+these formats in order to create DateTime objects, and it can take
+a DateTime object and produce a string representing it in the MySQL
+format.
