@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 11:24:36 abs Exp $
+
+SHA1 (DateTime-Format-MySQL-0.04.tar.gz) = 5d960e7250dc9122267d5ce95e88d434cc232d59
+RMD160 (DateTime-Format-MySQL-0.04.tar.gz) = 47a47ee37ae3bbfae1fc9c46c6fd4f4a2b2b86c9
+Size (DateTime-Format-MySQL-0.04.tar.gz) = 11539 bytes
